# article-SWH-bioinfo-fr

./: .gitignore  2024-12-30_chatgpt_text.md  2025-01-14_v1.md  AUTHORS  README.md  audio_text.txt  codemeta.json  pyproject.toml  transcript.py
