[project]
authors = [{name = "Pierre Poulain", email = "pierre.poulain@cupnet.net"}]
description = "Préparation d'un article sur Software Heritage pour Bioinfo-fr"
name = "Préparation d'un article sur Software Heritage pour Bioinfo-fr"
requires-python = ">= 3.12"
version = "0.1.0"
dependencies = ["groq>=0.13.1,<0.14", "yt-dlp[default]>=2024.12.23,<2025"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.12.*"
ffmpeg = ">=7.1.0,<8"
ruff = ">=0.8.4,<0.9"
